--- a/website.html
+++ b/website.html
@@ -15,7 +15,7 @@
 			<li>three</li>
 			<li>four</li>
 		</ul>
-		<a href="website2.html">click here for website2</a>
+		<a href="website2.html">Click here for website2</a>
 		<a href="https://www.columbiamissourian.com/">Columbia Missourian</a>
 	</body>
 </html>
