--- a/website.html
+++ b/website.html
@@ -10,10 +10,16 @@
 		<a href="mailto:nicole.gutierrez314@gmail.com"><img src="img/nicolegutierrez.jpg" alt="Nicole Gutierrez"></a>
 
 		<ul>
-			<li>one</li>
-			<li>two</li>
-			<li>three</li>
-			<li>four</li>
+			<li>The Great Gatsby</li>
+			<li>Little Fires Everywhere</li>
+			<li>The Hobbit</li>
+			<li>Hunger Games (trilogy)</li>
+			<li>Normal People</li>
+			<li>Little Women</li>
+			<li>Game of Thrones</li>
+			<li>Perks of Being a Wallflower</li>
+			<li>Silver Linings Playbook</li>
+			<li>Pride and Prejudice</li>
 		</ul>
 		<a href="website2.html">Click here for website2</a>
 		<a href="https://www.columbiamissourian.com/">Columbia Missourian</a>
